<resources>
    <!-- Titles -->
    <string name="app_name">HealthDiary</string>
    <string name="action_settings">Settings</string>
    <string name="title_name">Health Diary</string>
    <string name="title_activity_run">runActivity</string>
    <string name="title_activity_eat">EatActivity</string>
    <string name="title_activity_data">DataActivity</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Table -->
    <string name="table_time">Time</string>
    <string name="table_food">Food</string>
    <string name="table_calories">Calories</string>

    <!-- Buttons -->
    <string name="add_entry_food">Add entry</string>
    <string name="run_button">RUN</string>
    <string name="eat_button">EAT</string>
    <string name="maps_button">MAPS</string>
    <string name="settings_button">SETTINGS</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign In</string>

    <!--DBButton Remove when no longer needed -->
    <string name="load_local_data">Load DB From File</string>
    <string name="delete_local_data">Delete Local DBs From File</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>


    <string name="search_label">Search</string>
    <string name="search_hint">Search Names</string>

    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_maps">Map</string>
    <string name="maps">Maps</string>

    <!-- Run Page Strings -->
    <string name="step_prefix">You have walked...</string>
    <string name="step_suffix">steps</string>
    <string name="distance_prefix">or a distance of</string>
    <string name="distance_suffix">metres</string>
    <string name="percentage_prefix">and are</string>
    <string name="percentage_progress">%</string>
    <string name="percentage_suffix">towards your daily step goal!</string>
    <string name="default_value">0</string>
    <string name="title_activity_food_entry">foodEntry</string>

    <!-- At a Glance Strings -->
    <string name="glance">At a Glance</string>
    <string name="textCalorie">Progress towards calorie goal</string>
    <string name="textSteps">Progress towards step goal</string>
    <string name="title_activity_signup">SignupActivity</string>
    <string name="title_activity_goals">GoalsActivity</string>
    <string name="title_activity_about_us">about_us</string>


    <!-- About Section string -->

    <string name = "about_us">
    QUT INB302 Capstone Project HEALTH DIARY: \n\n
    Capstone Team: Brisvegas Giants \n
    Application Version: 3.4 \n
    Team Members: 05279616 Ken Lewis,
        08562971 Zack Watson,
        Alex Tulic,
       08594031  Dylan Schumacher
        Taylor Beer \n
        Project Supervisor: Dr. Dhaval Vyas\n\n

Application outline: \n An interactive health and fitness diary by the "Brisvegas Giants"
team as part of the requirements for the subject INB302 - IT
Capstone. The HealthDiary encourages users to live a healthier lifestyle by tracking user steps,
        logging foods and their nutritional content and allowing users to set their own personal
        goals.\n\n
Further Details: Please see ReadMe.txt with project folder for list of known bugs, features still to
        be developed and additional information.






    </string>


</resources>
