<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="bvgiants.diary3.runActivity"
    tools:showIn="@layout/activity_run">

    <!-- Steps -->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/default_value"
        android:id="@+id/stepCounterView"
        android:layout_marginTop="80dp"
        android:layout_marginStart="150dp"
        android:textSize="32sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/step_suffix"
        android:id="@+id/stepsSuffix"
        android:textSize="32sp"
        android:layout_marginTop="80dp"
        android:layout_marginStart="200dp" />

    <TextView
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/step_prefix"
        android:id="@+id/textSummary"
        android:textSize="25sp"
        android:layout_alignTop="@+id/stepCounterView" />

    <!-- Distance -->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/default_value"
        android:id="@+id/distanceCounterView"
        android:textSize="32sp"
        android:layout_marginTop="140dp"
        android:layout_marginStart="150dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/distance_suffix"
        android:id="@+id/distanceSuffix"
        android:textSize="32sp"
        android:layout_marginTop="140dp"
        android:layout_marginStart="200dp"/>


    <!-- Goal -->
    <TextView
        android:layout_width="200dp"
        android:layout_height="98dp"
        android:text="@string/percentage_suffix"
        android:id="@+id/goalSummaryPost"
        android:textSize="20sp"
        android:layout_marginTop="300dp"
        android:layout_marginStart="150dp" />

    <!-- Percent Counter -->

    <TextView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:text="@string/default_value"
        android:id="@+id/percentageCounterView"
        android:textSize="32sp"
        android:layout_marginTop="300dp"
        android:layout_marginEnd="100dp"
      />


</RelativeLayout>
