<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="bvgiants.diary3.MainActivity"
    tools:showIn="@layout/activity_main"
    android:background="#faf8f8"
    android:clickable="false"
    android:contextClickable="false">

    <!--<ImageView
        android:layout_width="165dp"
        android:layout_height="165dp"
        android:id="@+id/imageView"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/healthdiarylogo"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="46dp" /> -->

    <!--\\\\\\ Heading ///////-->

    <!--\\\\\\\\\\Buttons ////////-->

    <ProgressBar
        android:id="@+id/progressBarStepsGoal"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="270dp"
        android:layout_height="30dp"
        android:progress="0"
        android:secondaryProgress="0"
        android:indeterminate="false"
        android:focusable="false"
        android:contextClickable="true"
        android:layout_above="@+id/calorieGoal"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/glance"
        android:id="@+id/atAGlanceTitle"
        android:textColor="@android:color/holo_blue_light"
        android:textSize="20sp"
        android:layout_above="@+id/progressBarStepsGoal"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="23dp" />

    <ProgressBar
        style="?android:attr/progressBarStyleHorizontal"
        android:id="@+id/progressBarCalories"
        android:layout_width="270dp"
        android:layout_height="30dp"
        android:progress="0"
        android:secondaryProgress="0"
        android:indeterminate="false"
        android:focusable="false"
        android:contextClickable="true"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/calorieGoal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/textSteps"
        android:id="@+id/stepGoal"
        android:layout_above="@+id/progressBarStepsGoal"
        android:layout_alignStart="@+id/progressBarStepsGoal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/textCalorie"
        android:id="@+id/calorieGoal"
        android:layout_above="@+id/progressBarCalories"
        android:layout_alignStart="@+id/progressBarStepsGoal" />
    <Button
        style="@style/menuButtons"
        android:id="@+id/buttonEat"
        android:background="@drawable/buttonchanges"
        android:text="@string/eat_button"
        android:layout_gravity="center_vertical"
        android:layout_below="@+id/buttonRun"
        android:layout_marginTop="10dp"
        android:layout_alignParentEnd="true" />

    <Button
        style="@style/menuButtons"
        android:id="@+id/buttonRun"
        android:background="@drawable/buttonchanges"
        android:text="@string/run_button"
        android:clickable="true"
        android:layout_below="@+id/imageView"
        android:layout_marginTop="40dp"
        android:layout_alignParentEnd="true"/>

    <Button
        style="@style/menuButtons"
        android:id="@+id/buttonData"
        android:background="@drawable/buttonchanges"
        android:text="@string/data_button"
        android:onClick="menuSelect"
        android:layout_below="@+id/buttonEat"
        android:layout_marginTop="10dp"
        android:layout_alignParentEnd="true" />



</RelativeLayout>
